# g4_mag_course_proj

./: .gitignore  README.md
ScintDet/: CMakeLists.txt  CMakePresets.json  main.cpp
ScintDet/ActionInitialization/: CMakeLists.txt
ScintDet/ActionInitialization/include/: ActionInitialization.h
ScintDet/ActionInitialization/src/: ActionInitialization.cpp
ScintDet/DetectorConstruction/: CMakeLists.txt
ScintDet/DetectorConstruction/include/: DetectorConstructionBase.h  SensitiveDetectorConstruction.h
ScintDet/DetectorConstruction/src/: DetectorConstructionBase.cpp  SensitiveDetectorConstruction.cpp
ScintDet/SensitiveDetector/: CMakeLists.txt
ScintDet/SensitiveDetector/include/: PrimitivePhotonCounter.h
ScintDet/SensitiveDetector/src/: PrimitivePhotonCounter.cpp
ScintDet/UserActions/: CMakeLists.txt
ScintDet/UserActions/include/: FixedPrimaryGeneratorAction.h  PrimaryGeneratorActionBase.h  RunAction.h  StackingAction.h  TrackingAction.h  UniformPrimaryGeneratorAction.h
ScintDet/UserActions/src/: FixedPrimaryGeneratorAction.cpp  PrimaryGeneratorActionBase.cpp  RunAction.cpp  StackingAction.cpp  TrackingAction.cpp  UniformPrimaryGeneratorAction.cpp
ScintDet/cmake/: ScintDetConfig.cmake  ToolBox.cmake
electron/: CMakeLists.txt  CMakePresets.json  along_x_generation_main.cpp  along_y_generation_main.cpp  along_z_generation_main.cpp  uniform_generation_main.cpp
electron/analysis/: process_along_axis_generation.C  process_uniform_generation.C
electron/output/dodecahedron/: along_x_generation.root  along_y_generation.root  along_z_generation.root  uniform_generation.root
electron/output/icosahedron/: along_x_generation.root  along_y_generation.root  along_z_generation.root  uniform_generation.root
neutron/: CMakeLists.txt  along_x_generation_main.cpp  center_generation_main.cpp  gamma_energy_main.cpp  lifespan.cpp  uniform_generation_main.cpp
neutron/analysis/: process_center_generation.C  process_gamma_E.C  process_lifespan.C  process_uniform_generation.C
neutron/output/: center_generation.root  center_lifespan.root  edge_lifespan.root  gamma_E_center.root  lifespan.root  uniform_generation.root  uniform_lifespan.root
positron/: CMakeLists.txt  along_x_generation_main.cpp  along_y_generation_main.cpp  along_z_generation_main.cpp  uniform_generation_main.cpp
positron/analysis/: process_along_axis_generation.C  process_uniform_generation.C
positron/output/: along_x_generation.root  along_y_generation.root  along_z_generation.root  uniform_generation.root
